# python-workbook2

./: .gitignore  README.md  git.md  inventory.txt  pyproject.toml  test.py
.github/workflows/: grading.yml
calculator/: app.py  calculator.py  database.py  python-workbook2 habib.code-workspace
calculator/templates/: history.html  index.html  stats.html
class_basics/00_class_intro/: class.md
class_basics/01_person/: person.py
class_basics/02_animal/: animal.py
class_basics/03_car/: car.py
class_basics/04_bank/: bank.py
class_basics/05_library/: library.py
class_basics/06_student/: student.py
class_basics/07_triangle/: triangle.py
class_basics/08_quiz/: advanced-assignment.md  advanced-assignment.py  problem.py  quiz-analyzer.py  quiz.md  quiz.py  quiz_data.py  student-data.py  (+2 more)
dunder_methods_encapsulation/: test.py
flask/: app.py  common.md
lambda_decorators/: average_grade.py  doc.md  hot_days.py  main.py  next_student.py  pyproject.toml  secret_note.py  sort_student_age.py  student_name_formatter.py  table_of_contents.md  task.py  task1.py  task2.py  task3.py  task4.py  task5.py  tasks.md  tasks.py  to_fahrenheit.py  weather_report.py  weather_tracker.py
my-flask-app/: app.py
my_flask_app/: main.py  pyproject.toml
nizar/: coin_sum.py  element_spelling.py  method.py
oop_principles/: oop-4-principles.md
posgres/: posgres.md
recap/: homework.py
repeating/: 01_easy.md  02_medium.md  03_hard.md  data.csv  solutions.py  test_solutions.py
telegram-bot/: simple_echo_bot_guide.md  telegram_bot_guide.md
tests/: grading.py  student.py
(+123 files in other folders)
