[project]
name = "python-workbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = "--tb=no --continue-on-collection-errors"

[tool.uv.workspace]
members = [
    "my_flask_app",
    "lambda_decorators",
]
